// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders correctly 1`] = `
.css-0,
[data-css-0] {
  background-image: url(http://example.com/test.js);
}

.css-1,
[data-css-1] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

<div
  data-css-1=""
  data-css-0=""
/>
`;

exports[`Image should set position 1`] = `
.css-0,
[data-css-0] {
  box-sizing: border-box;
  flex: 0 0 auto;
  -webkit-flex: 0 0 auto;
}

.css-1,
[data-css-1] {
  background-image: url(http://example.com/test.js);
  background-position: center;
}

<div
  data-css-0=""
  data-css-1=""
/>
`;
